maybePlot is done off the event thread, since reject can take a while. feedback improvements through logging. remove extra propertyChangeSupport which was causing problems with binding.
git-svn-id: https://svn.code.sf.net/p/autoplot/code/autoplot/trunk@477 0c594bb0-8543-0410-a25e-d8ec440261db